--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,11 @@
 }
 
 .pokemon-list-element{
-    
+
+}
+
+#user-container{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 200px 16px;
 }
