--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,10 @@
-#selected-pokemon{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 2px 16px;
-}
-
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-#pokemon-list-container{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 2px 16px;
-}
-
 .list-sprite{
-    height: 35px;
-    width: 35px;
+    height: 50px;
+    width: 50px;
 }
 
 .selected-sprite{
@@ -24,8 +12,43 @@
     width: 25%;
 }
 
-#user-container{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 200px 16px;
+#selected-pokemon{
+    position: relative;
+    padding: 5vh;
+    grid-column: 2;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
+#pokemon-list{
+    grid-column: 1;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0;
+    border-right: 1px solid #262626;
+}
+
+body {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 15% 85%;
+  }
+
+body {
+    display: grid;
+    position: relative;
+    padding: 5vh;
+    grid-column: 2;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background: rgb(255,61,4);
+    background: linear-gradient(90deg, rgba(255,61,4,1) 0%, rgba(201,28,27,0) 50%, rgba(0,212,255,1) 100%); 
+    }
