--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,42 @@
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.list-sprite{
-    height: 50px;
-    width: 50px;
-}
-
-.selected-sprite{
-    height: 25%;
-    width: 25%;
-}
-
-#selected-pokemon{
-    position: relative;
-    padding: 5vh;
-    grid-column: 2;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-#pokemon-list{
-    grid-column: 1;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 0;
-    border-right: 1px solid #262626;
-}
-
-body {
-    display: grid;
+/*FRONT PAGE******************************************/
+#grid-container {
     grid-template-columns: 30% 70%;
-    grid-template-rows: 15% 85%;
-  }
-
-body {
+    grid-template-rows: 35% 65%;
     display: grid;
-    position: relative;
-    padding: 5vh;
-    grid-column: 2;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    background: rgb(255,61,4);
-    background: linear-gradient(90deg, rgba(255,61,4,1) 0%, rgba(201,28,27,0) 50%, rgba(0,212,255,1) 100%); 
     }
+    /*USER TEAM*/
+    #user-container{
+    grid-row: 1;
+    grid-column: 2;
+    
+    }
+    #team-container > *{
+    display: inline-block;
+    width: 25%;
+    }
+    .user-poke-sprite{
+        margin: -20px -20px -40px -20px;
+    }
+
+    #selected-pokemon{
+    grid-row: 2;
+    grid-column: 2;
+    text-align: center;
+    }
+    /*POKEMON AVAILABLE FOR SELECTION*/
+    #pokemon-list-container{
+    grid-row:2;
+    grid-column:1;
+    height: 500px;
+    width:100%;
+    overflow:auto;
+    }
+    #pokemon-list-container > *{
+        list-style: none;
+        display: inline-block;
+        text-align: center;
+    }
+    #select-title{
+        font-size: 200%;
+    }
+/*SELECT OPPONENT PAGE********************************/
