fixed images and npm

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: url("https://wallup.net/wp-content/uploads/2016/05/24/143432-nature-Pokemon.jpg");
+    background-image: url("./pokemonbackground.png");
 }
 
 #start-game-button{
@@ -17,9 +17,8 @@ body {
     top:  50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    height: 50%;
-    width: 50%;
-    background-image: url("https://i.ytimg.com/vi/dL2oP_q-nN8/hqdefault.jpg");
+    height: 25%;
+    width: 25%;
 
 }
 
