--- a/styles.css
+++ b/styles.css
@@ -1,121 +1,117 @@
 /* FRONT PAGE******************************************/
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 
-* {    
-    font-family: 'Press Start 2P', cursive;
+* {
+  font-family: 'Press Start 2P', cursive;
 }
 * > li {
-    list-style: none;
+  list-style: none;
 }
 
 body {
-    background-image: url("./pokemonbackground.png");
+  background-image: url('./pokemonbackground.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-#start-game-button{
-    position: absolute;
-    top:  50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    height: 25%;
-    width: 25%;
-
+#start-game-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 25%;
+  width: 25%;
 }
 
 #grid-container {
-    grid-template-columns: 20% 80%;
-    grid-template-rows: 35% 65%;
-    display: grid;
-    }
-    /*USER TEAM*/
-    #user-container{
-    grid-row: 1;
-    grid-column: 2;
-    }
-    #team-container > *{
-    display: inline-block;
-    width: 25%;
-    }
-    .user-poke-sprite{
-        position: relative;
-        margin: -20px -20px -40px -20px;
-        z-index: -1
-    }
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 35% 65%;
+  display: grid;
+}
+/*USER TEAM*/
+#user-container {
+  grid-row: 1;
+  grid-column: 2;
+}
+#team-container > * {
+  display: inline-block;
+  width: 25%;
+}
+.user-poke-sprite {
+  position: relative;
+  margin: -20px -20px -40px -20px;
+  z-index: -1;
+}
 
-
-    #selected-pokemon{
-    grid-row: 2;
-    grid-column: 2;
-    text-align: center;
+#selected-pokemon {
+  grid-row: 2;
+  grid-column: 2;
+  text-align: center;
 }
 
 #defend-pokemon-container > img {
-    text-align: right;
+  text-align: right;
 }
 
 #defend-pokemon-container {
-    display: flex;
+  display: flex;
 }
 
 #attack-pokemon-container {
-    display: flex;
+  display: flex;
 }
 
 #attack-pokemon-container > img {
-    text-align: right;
+  text-align: right;
 }
 
-#opponent-select-screen-container{
-    display: flex;
-    
+#opponent-select-screen-container {
+  display: flex;
 }
 
 #start-battle {
-    background-color: lightseagreen;
+  background-color: lightseagreen;
 }
 
-
-#selected-sprite{
-height: 80%;
-width: 50%
+#selected-sprite {
+  height: 80%;
+  width: 50%;
 }
 
-#logo-container{
-    grid-row: 1;
-    grid-column: 1;
+#logo-container {
+  grid-row: 1;
+  grid-column: 1;
 }
 
-#logo-container > img{
-    object-fit: cover;
-    width: 80%
+#logo-container > img {
+  object-fit: cover;
+  width: 80%;
 }
 
+/*POKEMON AVAILABLE FOR SELECTION*/
+#pokemon-list-container {
+  grid-row: 2;
+  grid-column: 1;
+  height: 500px;
+  width: 100%;
+  overflow: auto;
+}
+#pokemon-list-container > * {
+  display: inline-block;
+  text-align: center;
+}
+#select-title {
+  font-size: 200%;
+}
 
-    /*POKEMON AVAILABLE FOR SELECTION*/
-    #pokemon-list-container{
-    grid-row:2;
-    grid-column:1;
-    height: 500px;
-    width:100%;
-    overflow:auto;
-    }
-    #pokemon-list-container > *{
-        display: inline-block;
-        text-align: center;
-    }
-    #select-title{
-        font-size: 200%;
-    }
+#battle-container {
+  height: 150%;
+  width: 150%;
+}
 
-    #battle-container{
-        height:150%;
-        width:150%;
-    }
-
-    #battle-container > *{
-        height:150%;
-        width:150%;
-    }
-
+#battle-container > * {
+  height: 150%;
+  width: 150%;
+}
 
 /*SELECT OPPONENT PAGE******************************* */
